--- a/src/register.html
+++ b/src/register.html
@@ -11,6 +11,7 @@
     <form class="register-info" onsubmit="return submitInfo()">
         <h2>Regisration form</h2>
         <div class="registerForm">
+        <div>
             <table>
                 <tr>
                     <td class="label-input">Login name:<span class="icon-valid" id="valid-username" style="color:red">*</span></td>
@@ -91,7 +92,8 @@
                     </td>
                 </tr>
             </table>
-            <div id="button_id">
+        </div>
+            <div id="button-id">
                 <input class="input-button-item" type="submit">
                 <input class="input-button-item" type="reset">
             </div>
